{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 134,
  "lineage": "bd69fa44-ed6e-50ce-9879-9d429926c68e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitored",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c25106ee38f6087",
            "arn": "arn:aws:ec2:eu-west-1:412869002243:instance/i-07abb6789705eab83",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wsc2026-event-ec2-role",
            "id": "i-07abb6789705eab83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0485276785eaf2c3f",
            "private_dns": "ip-172-16-0-17.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.17",
            "public_dns": "ec2-54-246-149-117.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.149.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:412869002243:key/bd6b4252-d379-4e1f-8fc8-ada9e0f6749c",
                "tags_all": {
                  "Project": "wsc2026-event"
                },
                "throughput": 125,
                "volume_id": "vol-0f331917e5fb3132b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09dfae6a88c6884c8",
            "tags": {
              "Name": "wsc2026-event-ec2"
            },
            "tags_all": {
              "Name": "wsc2026-event-ec2",
              "Project": "wsc2026-event"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6ced721ba71f493"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_security_group.ec2",
            "aws_subnet.this",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:internet-gateway/igw-0936f1f2b4c818e2e",
            "id": "igw-0936f1f2b4c818e2e",
            "owner_id": "412869002243",
            "tags": {
              "Name": "event-igw"
            },
            "tags_all": {
              "Name": "event-igw",
              "Project": "wsc2026-event"
            },
            "vpc_id": "vpc-0c91c66f70b4e999b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0936f1f2b4c818e2e",
            "id": "r-rtb-0327bcb2e1bc92cb81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0327bcb2e1bc92cb8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:route-table/rtb-0327bcb2e1bc92cb8",
            "id": "rtb-0327bcb2e1bc92cb8",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "event-pub-rtb"
            },
            "tags_all": {
              "Name": "event-pub-rtb",
              "Project": "wsc2026-event"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c91c66f70b4e999b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "event-pub-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026f0e57b5abf83e3",
            "route_table_id": "rtb-0327bcb2e1bc92cb8",
            "subnet_id": "subnet-09dfae6a88c6884c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "event-pub-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e9cfd193cc9d2a5",
            "route_table_id": "rtb-0327bcb2e1bc92cb8",
            "subnet_id": "subnet-0fc241d9ce6bc24e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:security-group/sg-0e6ced721ba71f493",
            "description": "wsc2026 event ec2 - no inbound (minimum)",
            "egress": [],
            "id": "sg-0e6ced721ba71f493",
            "ingress": [],
            "name": "wsc2026-event-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-event-sg"
            },
            "tags_all": {
              "Name": "wsc2026-event-sg",
              "Project": "wsc2026-event"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c91c66f70b4e999b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "event-pub-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:subnet/subnet-09dfae6a88c6884c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dfae6a88c6884c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "event-pub-a"
            },
            "tags_all": {
              "Name": "event-pub-a",
              "Project": "wsc2026-event"
            },
            "vpc_id": "vpc-0c91c66f70b4e999b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "event-pub-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:subnet/subnet-0fc241d9ce6bc24e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc241d9ce6bc24e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "event-pub-b"
            },
            "tags_all": {
              "Name": "event-pub-b",
              "Project": "wsc2026-event"
            },
            "vpc_id": "vpc-0c91c66f70b4e999b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:vpc/vpc-0c91c66f70b4e999b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0325a5ca861237dc5",
            "default_route_table_id": "rtb-0a317164113ccfec1",
            "default_security_group_id": "sg-04bbce436b025e7a3",
            "dhcp_options_id": "dopt-0524f84cf4a54b246",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c91c66f70b4e999b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a317164113ccfec1",
            "owner_id": "412869002243",
            "tags": {
              "Name": "event-vpc"
            },
            "tags_all": {
              "Name": "event-vpc",
              "Project": "wsc2026-event"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:412869002243:security-group-rule/sgr-0115e3ebfcb55ae43",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "outbound all",
            "from_port": null,
            "id": "sgr-0115e3ebfcb55ae43",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e6ced721ba71f493",
            "security_group_rule_id": "sgr-0115e3ebfcb55ae43",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-event"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}